--- a/main.html
+++ b/main.html
@@ -4,13 +4,22 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>Accessible Portfolio</title>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+    <img src="" alt="image" role="img">
+	<h1 role="heading">Hello world</h1>
+	<ul role="list">
+		<li role="listitem">1</li>
+		<li role="listitem">2</li>
+		<li role="listitem">3</li>
+	
+	</ul
+  <nav role="navigation"></nav>
 </body>
 
 </html>
